[package]
name = "orbot"
version = "0.1.0"
authors = ["Iaiao <err266228@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.2", default-features = false, features = [ "client", "gateway", "rustls_backend", "model", "unstable_discord_api" ] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.62"
rand = "0.8.3"